Add Isotope and ImageLoaded

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+    <script src="./../bower_components/isotope/dist/isotope.pkgd.js"></script>
+    <script src="./../bower_components/imagesloaded/imagesloaded.pkgd.js"></script>
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
     <link rel="stylesheet" href="app/vendor.css">
     <!-- bower:css -->
