--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
 
     <script src="./../bower_components/isotope/dist/isotope.pkgd.js"></script>
     <script src="./../bower_components/imagesloaded/imagesloaded.pkgd.js"></script>
+
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
     <link rel="stylesheet" href="app/vendor.css">
+    <link rel="stylesheet" href="./../bower_components/Bootflat/bootflat/css/bootflat.css">
     <!-- bower:css -->
     <!-- run `gulp inject` to automatically populate bower styles dependencies -->
     <!-- endbower -->
@@ -40,7 +42,10 @@
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
-
+      <!-- Bootflat's JS files.-->
+      <script src="./../bower_components/Bootflat/bootflat/js/icheck.min.js"></script>
+      <script src="./../bower_components/Bootflat/bootflat/js/jquery.fs.selecter.min.js"></script>
+      <script src="./../bower_components/Bootflat/bootflat/js/jquery.fs.stepper.min.js"></script>
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
